[gd_scene load_steps=11 format=2]

[ext_resource path="res://Tilesheets/colored_transparent.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Weapons/Weapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/PlayerStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Lightmaps/light_big.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=5]
radius = 6.01308
height = 1.66667

[sub_resource type="CircleShape2D" id=4]
radius = 6.07505

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 3.0, -3.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "move_stop"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 81
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 461, 18, 12, 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.442511 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 6 )
texture_scale = 0.3
mode = 2
shadow_enabled = true
shadow_gradient_length = 5.0

[node name="WeaponPosition" type="Position2D" parent="."]

[node name="Weapon" parent="WeaponPosition" instance=ExtResource( 3 )]
position = Vector2( 13.5, 0 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2( 0, 1.1919 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/move = SubResource( 2 )
anims/move_stop = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
[connection signal="attack_done" from="WeaponPosition/Weapon" to="." method="_on_Weapon_attack_done"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
